# yc-mcp-gen

./: .gitignore  README.md  gumloop_util.py  main.py  pyproject.toml  requirements.txt  server.py
utils/: gumloop_util.py
