[project]
name = "yc-mcp-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.68.0,<0.69.0",
    "httpx>=0.24.0,<0.25.0",
    "openapi3-parser>=1.1.21",
    "pydantic>=1.8.0,<2.0.0",
    "python-dotenv>=0.19.0,<0.20.0",
    "pyyaml>=6.0.0,<7.0.0",
    "uvicorn>=0.15.0,<0.16.0",
]
